# EuroscopeRampAgent

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  vcpkg.json
.github/workflows/: build.yml
src/: RampAgent.cpp  RampAgent.h  Version.h.in
src/core/: CompileCommands.h  TagFunctions.h  TagItem.h
